[gd_scene load_steps=8 format=3 uid="uid://ddx75hydpncta"]

[ext_resource type="Script" uid="uid://bs61bugx28tme" path="res://Global_Scenes/Debug/Command_Edit/Show_Dialogue/Scripts/Show_Dialogue.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://gi3fh4x5672i" path="res://Global_Scenes/Debug/Command_Edit/Command_Base.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bw5v6ylf3w3bh" path="res://Global_Scenes/Debug/Command_Edit/Show_Dialogue/Key.tscn" id="3_w5sew"]
[ext_resource type="PackedScene" uid="uid://cnpcrhnjo25h1" path="res://Global_Scenes/Debug/Scenes/Value_Select/Value_Options.tscn" id="3_xthew"]
[ext_resource type="PackedScene" uid="uid://ceaqnana6y842" path="res://Global_Scenes/Debug/Scenes/Value_Select/Var_Select.tscn" id="4_fprw6"]
[ext_resource type="PackedScene" uid="uid://dmysqox083lhl" path="res://Global_Scenes/Debug/Scenes/Value_Select/Value_Bool.tscn" id="6_e03wb"]
[ext_resource type="PackedScene" uid="uid://cxnqe4iwkkj12" path="res://Global_Scenes/Debug/Scenes/Value_Select/Value_Num.tscn" id="7_wgbjd"]

[node name="Show_Dialogue" instance=ExtResource("2")]
script = ExtResource("1")

[node name="Background" parent="." index="0"]
layout_mode = 1
anchors_preset = 15
grow_horizontal = 2
grow_vertical = 2

[node name="Window" parent="." index="1"]
offset_left = -150.0
offset_top = -216.0
offset_right = 150.0
offset_bottom = 216.0

[node name="Margin" type="MarginContainer" parent="Window/Contents" index="0"]
light_mask = 8
visibility_layer = 8
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Window/Contents/Margin" index="0"]
light_mask = 8
visibility_layer = 8
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBox" type="VBoxContainer" parent="Window/Contents/Margin/VBox" index="0"]
light_mask = 8
visibility_layer = 8
layout_mode = 2
theme_override_constants/separation = 8

[node name="Key_Type" parent="Window/Contents/Margin/VBox/VBox" index="0" instance=ExtResource("3_xthew")]
layout_mode = 2
_e_options_loc_id = "DEBUG_CUTSCENES_KEY_TYPE_%s"
_e_options = ["Map", "Global"]
_e_heading_loc_id = "DEBUG_CUTSCENES_KEY_TYPE"
_e_var_select_scene = ExtResource("4_fprw6")

[node name="Key" parent="Window/Contents/Margin/VBox/VBox" index="1" instance=ExtResource("3_w5sew")]
layout_mode = 2

[node name="Process_Type" parent="Window/Contents/Margin/VBox/VBox" index="2" instance=ExtResource("3_xthew")]
layout_mode = 2
_e_options_loc_id = "DEBUG_CUTSCENES_PROCESS_TYPE_%s"
_e_options = ["Main", "Sub", "Manual"]
_e_heading_loc_id = "DEBUG_CUTSCENES_PROCESS_TYPE"
_e_var_select_scene = ExtResource("4_fprw6")

[node name="Start_Idx" parent="Window/Contents/Margin/VBox/VBox" index="3" instance=ExtResource("7_wgbjd")]
layout_mode = 2
_e_heading_loc_id = "DEBUG_CUTSCENES_START_IDX"
_e_var_select_scene = ExtResource("4_fprw6")

[node name="End_Idx" parent="Window/Contents/Margin/VBox/VBox" index="4" instance=ExtResource("7_wgbjd")]
layout_mode = 2
_e_heading_loc_id = "DEBUG_CUTSCENES_END_IDX"
_e_var_select_scene = ExtResource("4_fprw6")

[node name="Value" parent="Window/Contents/Margin/VBox/VBox/End_Idx" index="1"]
min_value = -1.0
value = -1.0

[node name="Layer" parent="Window/Contents/Margin/VBox/VBox" index="5" instance=ExtResource("7_wgbjd")]
layout_mode = 2
_e_heading_loc_id = "DEBUG_CUTSCENES_LAYER"
_e_var_select_scene = ExtResource("4_fprw6")

[node name="Value" parent="Window/Contents/Margin/VBox/VBox/Layer" index="1"]
min_value = -128.0
max_value = 128.0
value = 10.0

[node name="Fade_Out" parent="Window/Contents/Margin/VBox/VBox" index="6" instance=ExtResource("6_e03wb")]
layout_mode = 2
_e_heading_loc_id = "DEBUG_CUTSCENES_FADE_OUT"
_e_var_select_scene = ExtResource("4_fprw6")

[node name="Value" parent="Window/Contents/Margin/VBox/VBox/Fade_Out" index="1"]
button_pressed = true

[node name="HBox" type="HBoxContainer" parent="Window/Contents/Margin/VBox" index="1"]
light_mask = 8
visibility_layer = 8
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 10
theme_override_constants/separation = 8
alignment = 2

[node name="OK" type="Button" parent="Window/Contents/Margin/VBox/HBox" index="0"]
light_mask = 8
visibility_layer = 8
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "OK"

[node name="Cancel" type="Button" parent="Window/Contents/Margin/VBox/HBox" index="1"]
light_mask = 8
visibility_layer = 8
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "CANCEL"

[editable path="Window"]
[editable path="Window/Contents/Margin/VBox/VBox/End_Idx"]
[editable path="Window/Contents/Margin/VBox/VBox/Layer"]
[editable path="Window/Contents/Margin/VBox/VBox/Fade_Out"]
